--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1598,6 +1598,32 @@ input[class*=bg-] + .form-control-feedback {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+
+.btn-non-success {
+  color: #4cd964;
+  background-color: #fff;
+  border: 1px solid #4cd964;
+  border-color: #4cd964;
+}
+.btn-non-success:hover,
+.btn-non-success:focus,
+.btn-non-success:active,
+.btn-non-success.active,
+.open .dropdown-toggle.btn-non-success {
+  color: #4cd964;
+  background-color: #fff;
+  border: 1px solid #4cd964;
+  border-color: #4cd964;
+}
+.btn-non-success:active,
+.btn-non-success.active,
+.open .dropdown-toggle.btn-non-success {
+  background-image: none;
+  outline: none;
+}
+
+
 .btn-success:focus,
 .btn-success.focus,
 .btn-success:hover {
