--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -1994,6 +1994,32 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ff2d55;
   border-color: #ff2d55;
 }
+
+.btn-non-success {
+  color: #4cd964;
+  background-color: #fff;
+  border: 1px solid #4cd964;
+  border-color: #4cd964;
+}
+.btn-non-success:hover,
+.btn-non-success:focus,
+.btn-non-success:active,
+.btn-non-success.active,
+.open .dropdown-toggle.btn-non-success {
+  color: #4cd964;
+  background-color: #fff;
+  border: 1px solid #4cd964;
+  border-color: #4cd964;
+}
+.btn-non-success:active,
+.btn-non-success.active,
+.open .dropdown-toggle.btn-non-success {
+  background-image: none;
+  outline: none;
+}
+
+
+
 .btn-success {
   color: #ffffff;
   background-color: #4cd964;
