--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -1957,6 +1957,37 @@ fieldset[disabled] .btn-warning.active {
   background-color: #ffcc00;
   border-color: #ffcc00;
 }
+.btn-non-warning:focus,
+.btn-non-warning.focus,
+.btn-non-warning:hover {
+  background-color: #FF5722;
+  color: #fff;
+  border-color: #FF5722;
+}
+.btn-non-warning:active,
+.btn-non-warning.active,
+.open > .dropdown-toggle.btn-non-warning {
+  background-color: #FF5722;
+  color: #fff;
+  border-color: #FF5722;
+}
+.btn-non-warning:active:hover,
+.btn-non-warning.active:hover,
+.open > .dropdown-toggle.btn-non-warning:hover,
+.btn-non-warning:active:focus,
+.btn-non-warning.active:focus,
+.open > .dropdown-toggle.btn-non-warning:focus,
+.btn-non-warning:active.focus,
+.btn-non-warning.active.focus,
+.open > .dropdown-toggle.btn-non-warning.focus {
+  background-color: #FF5722;
+  color: #fff;
+  border-color: #FF5722;
+}
+.btn-non-warning.disabled {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 .btn-danger {
   color: #ffffff;
   background-color: #ff2d55;
