--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1708,6 +1708,40 @@ input[class*=bg-] + .form-control-feedback {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+
+.btn-non-warning:focus,
+.btn-non-warning.focus,
+.btn-non-warning:hover {
+  background-color: #FF5722;
+  color: #fff;
+  border-color: #FF5722;
+}
+.btn-non-warning:active,
+.btn-non-warning.active,
+.open > .dropdown-toggle.btn-non-warning {
+  background-color: #FF5722;
+  color: #fff;
+  border-color: #FF5722;
+}
+.btn-non-warning:active:hover,
+.btn-non-warning.active:hover,
+.open > .dropdown-toggle.btn-non-warning:hover,
+.btn-non-warning:active:focus,
+.btn-non-warning.active:focus,
+.open > .dropdown-toggle.btn-non-warning:focus,
+.btn-non-warning:active.focus,
+.btn-non-warning.active.focus,
+.open > .dropdown-toggle.btn-non-warning.focus {
+  background-color: #FF5722;
+  color: #fff;
+  border-color: #FF5722;
+}
+.btn-non-warning.disabled {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+
 .btn-danger:focus,
 .btn-danger.focus,
 .btn-danger:hover {
