--- a/assets/css/admin/core.css
+++ b/assets/css/admin/core.css
@@ -137,6 +137,14 @@
   font-weight: 500!important;
 }
 
+#printThis .small_nickname{
+  font-weight: 400;
+  font-size: 45px;
+  letter-spacing: 15px;
+  padding: 19px 40px 0 58px;
+  overflow: hidden;
+}
+
 #printThis .nick_name{
   font-weight: 400;
   font-size: 70px;
