--- a/assets/css/admin/core.css
+++ b/assets/css/admin/core.css
@@ -66,13 +66,13 @@
 }
 
 #nametag{
-    position: absolute;
+    /* position: absolute; */
     padding: 0;
     background-color: #fff;
     display: inline-block;
-    left: 50%;
-    top: 10%;
-    transform: translateX(-50%);
+    /* left: 50%; */
+    /* top: 10%; */
+    /* transform: translateX(-50%); */
 }
 
 #nametag.align-center{
@@ -93,7 +93,7 @@
 }
 
 #printThis .a4_area{
-    width: 794px;
+    width: 10cm;
     height: 24cm;
     page-break-after: always;
 }
@@ -117,7 +117,7 @@
 }
 
 #printThis .txt_con{
-    height: 526px;
+    /* height: 526px; */
     position: relative;
     width: 100%;
     margin-top: 152px;
@@ -166,19 +166,20 @@
 
 #printThis .receipt{
     position: absolute;
-    width: 100%;
-    padding-right: 96px;
+    /* width: 100%; */
+    right: 20px;
+    /* padding-right: 96px; */
     text-align: right;
 }
 #printThis .receipt_num_1{
   top: 308px;
-  left: 78px;
+  /* left: 78px; */
   font-size: 10px;
 }
 
 #printThis .receipt_num_2{
   top: 533px;
-  left: 78px;
+  /* left: 78px; */
   font-size: 10px;
 }
 
@@ -190,9 +191,9 @@
 
 #printThis .small_nick{
   position: absolute;
-  top: 594px;
-  font-size: 10px;
-  right: 185px;
+    top: 596px;
+    font-size: 10px;
+    right: 271px;
 }
 #printThis .smaill_ln{
   position: absolute;
@@ -202,8 +203,8 @@
 }
 #printThis .small_sn{
   position: absolute;
-  top: 612px;
-  right: 136px;
+  top: 614px;
+  right: 238px;
   font-size: 10px;
 }
 
@@ -212,11 +213,13 @@
 }
 
 #printThis .receipt_name{
-  top: 70.5%;
+  top: 144.5%;
+  right: 85px;
 }
 
 #printThis .receipt_price{
-  top: 73.5%;
+  top: 151%;
+  right: 85px;
 }
 
 
