--- a/assets/css/admin/core.css
+++ b/assets/css/admin/core.css
@@ -51,7 +51,7 @@
 .edit_wrapper{
     width: 100%;
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
     text-align: center;
 }
 
