--- a/assets/css/admin/core.css
+++ b/assets/css/admin/core.css
@@ -124,7 +124,7 @@
 }
 
 #printThis .org{
-  font-size: 25px;
+  font-size: 20px;
   padding: 0 10px;
   top: 16%;
   word-break: keep-all;
@@ -134,7 +134,7 @@
   align-items: center;
   letter-spacing: -0.5px;
   transform: translateY(-9px);
-  font-weight: 500!important;
+  font-weight: 400!important;
 }
 
 #printThis .small_nickname{
@@ -147,15 +147,19 @@
 
 #printThis .nick_name{
   font-weight: 400;
-  font-size: 70px;
-    letter-spacing: 20px;
-    padding: 19px 40px 0 58px;
-    overflow: hidden;
+  font-size: 35px;
+  letter-spacing: 20px;
+  padding: 19px 40px 0 58px;
+  overflow: hidden;
 }
 
 #printThis .nick_name.lang_en{
     letter-spacing: 0px;
     padding: 30px 10px 0 10px;
+}
+
+#printThis #first_name{
+  padding: 0px 10px 0 10px;
 }
 
 #printThis .draggable{
@@ -168,11 +172,11 @@
     position: relative;
     /* width: 100%; */
     /* padding-right: 96px; */
-    text-align: right;
+    text-align: left;
 }
 #printThis .receipt_num_1{
-  top: 53px;
-  right: 19px;
+  top: 87px;
+  left: 139px;
   font-size: 10px;
 }
 
@@ -212,13 +216,13 @@
 }
 
 #printThis .receipt_name{
-  top: 99px;
-  right: 94px;
+  top: 83px;
+  left: 94px;
 }
 
 #printThis .receipt_price{
-  top: 95px;
-  right: 94px;
+  top: 93px;
+  left: 144px;
 }
 
 
@@ -235,8 +239,7 @@
 /*    float: left;*/
 /*    width: 100px;*/
     margin-bottom: 0px;
-    top: 32%;
-    padding: 0 10px;
+    padding:20px 10px;
 }
 
 #qrcode img{
